# runchart_cpp

./: .dockerignore  .env  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  WINDOWS_SETUP_GUIDE.md  build_windows.bat  data.json  run.sh
proto/: runchart.proto
scripts/: test_stream_endpoint.sh
src/: audio_player.cpp  audio_player.h  catalog.cpp  catalog.h  client_main.cpp  config.cpp  config.h  desktop_main.cpp  main.cpp  measurement.cpp  measurement.h  metrics.cpp  metrics.h  playback_controller.cpp  playback_controller.h  run_chart_client.cpp  run_chart_client.h  run_chart_service.cpp  run_chart_service.h  server_main.cpp  session_auth.cpp  session_auth.h  stream_http.cpp  stream_http.h  structured_logger.cpp  structured_logger.h
